--- a/package.json
+++ b/package.json
@@ -15,10 +15,16 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
+    "@types/http-status-codes": "^1.2.0",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "http": "^0.0.1-security",
+    "http-status": "^2.1.0",
+    "http-status-codes": "^2.3.0",
     "mongoose": "^8.9.2",
     "zod": "^3.24.1"
   },
