--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/http-status-codes": "^1.2.0",
     "bcrypt": "^5.1.1",
@@ -25,13 +24,16 @@
     "http": "^0.0.1-security",
     "http-status": "^2.1.0",
     "http-status-codes": "^2.3.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.2",
     "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/eslint__js": "^8.42.3",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "eslint": "^9.14.0",
     "globals": "^15.14.0",
     "prettier": "^3.4.2",
